// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary component with a single paragraph 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS3 {
  0: [object Object];
  1: null;
}

.IS4 {
  color: #696969;
  font-family: GillSansMTStd-Medium;
  font-size: 13;
  line-height: 15;
  margin-bottom: 5px;
}
</style>

<View
  style={null}
>
  <View
    className="IS1"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </View>
  <Text
    accessibilityRole="header"
    aria-level="3"
    className="IS2"
  >
    Test Headline
  </Text>
  <Text
    className="IS3"
  >
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <Text
    className="IS4"
    testID="datePublication"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </Text>
  <Text>
    <ArticleByline
      ast={
        Array [
          Object {
            "attributes": Object {
              "slug": "camilla-long",
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Camilla Long",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "author",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": ", Environment Editor",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "inline",
          },
        ]
      }
    />
  </Text>
</View>
`;

exports[`2. article summary content component with the given style 1`] = `
<style>
.IS1 {
  0: [object Object];
  1: null;
}
</style>

<Text
  className="IS1"
>
  <Text>
    
    Test
    ...
  </Text>
</Text>
`;

exports[`3. article summary content component with white space height and lineheight 1`] = `
<style>
.IS1 {
  0: [object Object];
  1: [object Object];
}
</style>

<Text
  className="IS1"
  numberOfLines={4}
>
  <Text>
    
    Test
    ...
  </Text>
</Text>
`;

exports[`4. article summary content component without white space height 1`] = `
<style>
.IS1 {
  0: [object Object];
  1: null;
}
</style>

<Text
  className="IS1"
  numberOfLines={2}
>
  <Text>
    
    Test
    ...
  </Text>
</Text>
`;
